# try-websocket

./: .pre-commit-config.yaml  Dockerfile  Dockerfile.locust  Dockerfile.tests  README.md  docker-compose-e2e.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: python-app-tests.yml
e2e_and_performance/: e2e.py  locustfile.py
src/traiding_app/: main.py  websocket_receiver_endpoint.py
tests/: test_api.py  test_data.py  test_models.py  test_websocket.py
traiding_app/models/: constants.py  order.py
