[tool.poetry]
name = "try-websocket"
version = "0.1.0"
description = "Example repository using fastapi and websocket"
authors = ["Kulasz (Lukasz Chojecki)"]
readme = "README.md"
packages = [{include = "traiding_app", from="src"}]


[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"

[tool.poetry.group.dev.dependencies]

pytest = "^8.2.2"
black = "^24.4.2"
pre-commit = "^3.7.1"
isort = "^5.13.2"
mypy = "^1.10.0"
pylint = "^3.2.3"
httpx = "^0.27.0"
mock = "^5.1.0"
coverage = "^7.5.3"
ruff = "^0.4.9"
types-mock = "^5.1.0.20240425"
pytest-coverage = "^0.0"
pytest-html = "^4.1.1"



[tool.poetry.group.test.dependencies]
locust = "^2.29.0"
pytest = "^8.2.2"
pytest-html = "^4.1.1"
locust-plugins = {extras = ["websocket"], version = "^4.4.3"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = [
    "tests",
]

[tool.coverage.report]
fail_under = 80  # for now
omit = ["tests/*", "e2e_and_performance"]
skip_empty = true

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["src", "test"]

[tool.black]
line-length = 100
extend-exclude = ".pre-commit-config.yaml"

[tool.pylint]
ignore-paths = '^e2e_and_performance'
max-line-length = 120
disable = ["W0511", "C0114", "C0103", "C0115", "C0116", "W0613", "R0801"] #Ignore TODOs ,docstrings, unused arguments

[tool.ruff]
exclude = [
    ".pre-commit-config.yaml",
    ".git",
    ".venv",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".vscode",
    "_build",
    "build",
    "dist",
    "htmlcov",
    "e2e_and_performance"
]
line-length = 120

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
exclude = ["e2e_and_performance"]

[tool.mypy]
exclude = ['^e2e_and_performance']